--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@tanstack/react-query": "^5.59.16",
-    "@tanstack/react-query-devtools": "^5.59.16",
+    "@tanstack/react-query": "^5.52.0",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -25,12 +24,13 @@
     "lucide-react": "^0.429.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
-    "next": "^15.0.2",
+    "next": "14.2.6",
     "nodemailer": "^6.9.14",
     "openai": "^4.56.0",
     "pino": "^9.4.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-wordcloud": "^1.2.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
