--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios-rate-limit": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.4",
     "graphql-request": "^7.1.0",
     "lucide-react": "^0.429.0",
     "mongodb": "^6.5.0",
@@ -29,6 +30,7 @@
     "next": "14.2.6",
     "nodemailer": "^6.9.14",
     "openai": "^4.56.0",
+    "pinata-web3": "^0.5.2",
     "pino": "^9.4.0",
     "react": "^18",
     "react-dom": "^18",
@@ -40,7 +42,7 @@
     "wagmi": "^2.12.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.16.1",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
